# strix_interal

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile.build  package-lock.json  pyproject.toml  run-xben-setup.bat
.github/workflows/: build-release.yml
.planning/: BUILD-SESSION.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  XBEN-SETUP-SUMMARY.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-build-release-pipeline/: 01-CONTEXT.md  01-DISCUSSION-LOG.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
build_script/: build-all.sh  build-binary.sh  build-sandbox.sh  version.sh
containers/: Dockerfile  docker-entrypoint.sh
strix/agents/: prompt.py
strix/config/: loader.py  models.py
strix/core/: execution.py  runner.py  sessions.py
strix/interface/: cli.py  main.py  utils.py
strix/telemetry/: _common.py  _scan_stats.py  posthog.py  scarf.py
strix/utils/: context.py  json_store.py  tool_response.py
tests/: test_config_loader.py  test_config_settings.py  test_core_inputs.py  test_core_paths.py  test_interface_utils.py  test_report_dedupe.py  test_report_usage.py  test_report_writer.py  test_telemetry_common.py  test_utils_resource_paths.py
xben-benchmarks/: README.md
xben-benchmarks/XBEN/: README.md  pyproject.toml  run_infer.py  run_infer_cli.py
xben-benchmarks/XBEN/tests/: __init__.py  test_run_infer_cli.py
(+19 files in other folders)
